Updated the code for detailsPage-- -- Added email and name to display using a global variable

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
             android:name=".BookDetailsActivity"
             android:label="Book Details Activity" />
         <activity android:name=".AccountSummaryActivity" />
+        <activity android:name=".DetailsActivity" />
 
     </application>
 
